adding report links to Docker images

--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -75,16 +75,31 @@ steps:
         environment:
           - IMAGE=example-voting-app/result
           - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+        on_success:
+          metadata:
+            set:
+              - ${{BuildResultImage.imageId}}:
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
       ScanVoteImage:
         image: codefresh/cfstep-paclair:3.0.0
         environment:
           - IMAGE=example-voting-app/vote
           - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+        on_success:
+          metadata:
+            set:
+              - ${{BuildVoteImage.imageId}}:
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
       ScanWorkerImage:
         image: codefresh/cfstep-paclair:3.0.0
         environment:
           - IMAGE=example-voting-app/worker
           - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+        on_success:
+          metadata:
+            set:
+              - ${{BuildWorkerImage.imageId}}:
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
   GenerateReportsIndexHTML:
     image: alpine
     commands:
