updating to support composition variables

--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -26,6 +26,8 @@ steps:
         command: bash -c 'IFS=" " read -a browserarray <<< "${{BROWSERS}}" && for browser in "$${browserarray[@]}"; do BROWSER=$$browser python -m pytest -vvv --alluredir=${{CF_VOLUME_PATH}}/allure-results ./tests/selenium/test_app.py; done'
         volumes:
           - '${{CF_VOLUME_NAME}}:/codefresh/volume'
+    composition_variables:
+      - selenium_hub_image=${{selenium_hub_image}}
   GenerateTestReporting:
     title: Generating Test Reporting
     image: codefresh/cf-docker-test-reporting
