--- a/.codefresh/docker-compose.yml
+++ b/.codefresh/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   selenium_hub:
-    image: selenium/hub:3.13.0
+    image: ${selenium_hub_image}
     ports:
       - 4444
     environment:
