--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -130,14 +130,6 @@ steps:
           isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
           isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
           isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
-  AddGPGKey:
-    title: Add GPG Key
-    image: dustinvanbuskirk/cfstep-helm:demo
-    commands:
-    - kubectl config use-context sales-demo@FirstKubernetes
-    - echo -e "${{GPG_PUB}}" > mygpgkey_pub.asc
-    - echo -e "${{GPG_SEC}}" > mygpgkey_sec.asc
-    - gpg --import --allow-secret-key-import mygpgkey_sec.asc
   DeployPRRelease:
     stage: "pull request"
     title: Create Ephemeral Helm Release for Pull Request
@@ -158,7 +150,11 @@ steps:
       - value_vote_image_pullSecret=codefresh-generated-r.cfcr.io-cfcr-dustinvb-pull-requests
       - value_worker_image_repository=r.cfcr.io/dustinvanbuskirk/example-voting-app/worker
       - value_worker_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-      - value_worker_image_pullSecret=codefresh-generated-r.cfcr.io-cfcr-dustinvb-pull-requests  
+      - value_worker_image_pullSecret=codefresh-generated-r.cfcr.io-cfcr-dustinvb-pull-requests
+    commands:
+      - echo -e "${{GPG_SEC}}" > mygpgkey_sec.asc
+      - gpg --import --allow-secret-key-import mygpgkey_sec.asc
+      - /opt/bin/release_chart
     when:
       condition:
         any:
