--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -9,4 +9,4 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  postgresPassword: {{ .Values.secret_{{ .Release.Namespace }}_postgresql_postgresPassword | b64enc | quote }}
+  postgresPassword: {{ template "secret-name" . | b64enc | quote }}
