--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgresqlPassword
+  name: postgresql
   labels:
     app: example-voting-app
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -9,4 +9,4 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  postgresPassword: {{ printf "secret_%s_postgresql_postgresPassword" .Release.Namespace | b64enc | quote }}
+  password: {{ printf "secret_%s_postgresql_password" .Release.Namespace | b64enc | quote }}
