error with secret

--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -9,4 +9,4 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  password: {{ printf "secret_%s_postgresql_password" .Release.Namespace | b64enc | quote }}
+  password: {{ .Values.postgresql.password | b64enc | quote }}
