--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -9,5 +9,5 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  password: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
+  password: "{{ .Values.dbpassword | b64enc }}"
   
