fixed the chart of charts issue and version error with newest helm

--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -9,5 +9,4 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  password: "{{ .Values.dbpassword | b64enc }}"
-  
+  password: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
