need to add release name to prevent clean up of releases from deleting a key in use by a different release

--- a/example-voting-app/local-charts/worker/templates/deployment.yaml
+++ b/example-voting-app/local-charts/worker/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           - name: POSTGRES_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: postgresql
+                name: "postgresql-{{ .Release.Name }}"
                 key: password
           - name: REDIS_HOST
             value: {{ .Values.redis.host | default (printf "%s-redis" ( .Release.Name )) | quote }}
