--- a/example-voting-app/local-charts/worker/templates/secrets.yaml
+++ b/example-voting-app/local-charts/worker/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgresql
+  name: "postgresql-{{ .Release.Name }}"
   labels:
     app: example-voting-app
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
