--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -79,7 +79,7 @@ steps:
           metadata:
             set:
               - ${{BuildResultImage.imageId}}:
-                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/v2/5bad4b30b35f252387df1ffd/${{CF_BRANCH}}/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
       ScanVoteImage:
         image: dustinvanbuskirk/paclair:demo
         environment:
@@ -89,7 +89,7 @@ steps:
           metadata:
             set:
               - ${{BuildVoteImage.imageId}}:
-                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/v2/5bad4b30b35f252387df1ffd/${{CF_BRANCH}}/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
       ScanWorkerImage:
         image: dustinvanbuskirk/paclair:demo
         environment:
@@ -99,7 +99,7 @@ steps:
           metadata:
             set:
               - ${{BuildWorkerImage.imageId}}:
-                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+                - CLAIR_REPORT: "https://g.codefresh.io/api/testReporting/v2/5bad4b30b35f252387df1ffd/${{CF_BRANCH}}/s3/amazon/example-voting-app/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
   GenerateReportsIndexHTML:
     image: alpine
     commands:
